Popup box added for institute and course pages add update delete

--- a/angularapp1/src/app/updatecourse/updatecourse.component.html
+++ b/angularapp1/src/app/updatecourse/updatecourse.component.html
@@ -19,7 +19,7 @@
   <div style="margin-left: 2em;">
   <input type="text" id="editCourseTiming" [(ngModel)]="course.courseTiming" name="courseTiming" placeholder="Enter the course Timing" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 20em;">
   <textarea rows="4" cols="30" form="updateCourse" id="editCourseDescription" [(ngModel)]="course.courseDescription" name="courseDescription" placeholder="Enter Academy description" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 25em; margin-left: 40em;"></textarea>
-  <input type="button" (click)="update()"  id="updateCourse" value="Update Course" style="border-radius: 12px; background-color: forestgreen; padding: 0.5em; color: white;"   routerLink="/institute">
+  <input type="button" (click)="updatecourse()"  id="updateCourse" value="Update Course" style="border-radius: 12px; background-color: forestgreen; padding: 0.5em; color: white;"   routerLink="/institute">
   </div>
 </form>
 </div>
