--- a/angularapp1/src/app/updateacademy/updateacademy.component.html
+++ b/angularapp1/src/app/updateacademy/updateacademy.component.html
@@ -1,66 +1,58 @@
 <div id="academyHeader">
-    <h2>School Admission</h2>
-    <ul id="academyList">
-        <li id="adminAcademy">
-            <button (click)="viewAcademy()" id="adminAcademy">Academy</button>
-        </li>
-        <li id="adminCourse">
-            <button (click)="viewCourse()" id="adminCourse">Course</button>
-        </li>
-        <li id="adminStudents">
-            <button (click)="viewStudents()" id="adminStudents">Students</button>
-        </li>
-    </ul>
-    <div>
+  <h2>School Admission</h2>
+  <ul id="academyList">
+      <li id="adminAcademy">
+          <button (click)="viewAcademy()" id="adminAcademy">Academy</button>
+      </li>
+      <li id="adminCourse">
+          <button (click)="viewCourse()" id="adminCourse">Course</button>
+      </li>
+      <li id="adminStudents">
+          <button (click)="viewStudents()" id="adminStudents">Students</button>
+      </li>
+      
+
+       
+  </ul>
+  <div>
+
+  <button (click)="logout()" id="logout">Logout</button></div>
+</div>
+<div id="academyBackground">
   
-    <button (click)="logout()" id="logout">Logout</button></div>
+  <h5>Edit Academy</h5><br>
+  <div id="academyLeft">
+  <div  id="editAcademyName" >
+      <input type="text" class="form-control" placeholder="Enter Academy name" 
+      id="instituteId" [(ngModel)]="institute.instituteId" name="instituteId"  ><br>
+  </div><br><br>
+  <div  id="editimageUrl" >
+      <input type="text" [(ngModel)]="institute.imgUrl" class="form-control" placeholder="Enter the academy Image url"><br>
+  </div><br><br>
+  <div  id="editAcademyLocation" >
+      <input type="text" class="form-control" placeholder="Enter Academy Location" 
+      [(ngModel)]="institute.instituteAddress" name="instituteAddress"><br>
+  </div><br><br>
+  
   </div>
-  <form [formGroup]="updateacademyform" #ngForm="ngForm" (ngSubmit)="onSubmit($event)">
-  <div id="academyBackground">
-    <h5 style="color:white">Edit Academy</h5><br>
-    <div id="academyLeft">
-    <div  id="editAcademyName" >
-        <input formControlName="academyName" type="text" class="form-control" placeholder="Enter Academy name" 
-        id="instituteId" [(ngModel)]="institute.instituteId" name="instituteId"  ><br>
-        <small *ngIf="!updateacademyform.get('academyName').valid && updateacademyform.get('academyName').touched"
-                class="text-white">* Invalid Academy name</small>
-    </div><br><br>
-    <div  id="editimageUrl" >
-        <input formControlName="imageUrl" type="text" [(ngModel)]="institute.imgUrl" class="form-control" placeholder="Enter the academy Image url"><br>
-        <small *ngIf="!updateacademyform.get('imageUrl').valid && updateacademyform.get('imageUrl').touched"
-        class="text-white">* Invalid Image Url</small>
+
+  <form>
+  <div id="academyCenter">
+      <div id="editContactNumber" >
+          <input type="text " class="form-control"  placeholder="Enter the contact number"
+          [(ngModel)]="institute.mobileNo" name="mobileNo"><br>
       </div><br><br>
-    <div  id="editAcademyLocation" >
-        <input formControlName="academyLocation" type="text" class="form-control" placeholder="Enter Academy Location" 
-        [(ngModel)]="institute.instituteAddress" name="instituteAddress"><br>
-        <small *ngIf="!updateacademyform.get('academyLocation').valid && updateacademyform.get('academyLocation').touched"
-                class="text-white">* Invalid Academy Location</small>
-    </div><br><br>
-    </div>
-  
-    <div id="academyCenter">
-        <div id="editContactNumber" >
-            <input formControlName="contactNumber" type="text " class="form-control"  placeholder="Enter the contact number"
-            [(ngModel)]="institute.mobileNo" name="mobileNo"><br>
-            <small *ngIf="!updateacademyform.get('contactNumber').valid && updateacademyform.get('contactNumber').touched"
-                class="text-white">* Invalid Contact number</small>
-        </div><br><br>
-        <div  id="editEmailId" >
-            <input formControlName="emailId" type="text" class="form-control" placeholder="Enter the academy email"
-            [(ngModel)]="institute.email" name="email" ><br>
-            <small *ngIf="!updateacademyform.get('emailId').valid && updateacademyform.get('emailId').touched"
-                class="text-white">* Invalid Email ID</small>
-        </div><br><br>
-        <div  id="editAcademyDescription" >
-            <input formControlName="academyDesc" type="text" class="form-control"  placeholder="Enter Academy description"
-            [(ngModel)]="institute.instituteDescription" name="instituteDescription"><br><br>
-            <small *ngIf="!updateacademyform.get('academyDesc').valid && updateacademyform.get('academyDesc').touched"
-                class="text-white">* Invalid Academy Description</small>
-        </div><br><br>
-    </div>
-    <div id="academyRight">
-        <input type="button" (click)="updateAcademy()" class="btn btn-success" id="updateAcademy" name="update academy" value="update academy">
-    </div>
+      <div  id="editEmailId" >
+          <input type="text" class="form-control" placeholder="Enter the academy email"
+          [(ngModel)]="institute.email" name="email" ><br>
+      </div><br><br>
+      <div  id="editAcademyDescription" >
+          <input type="text" class="form-control"  placeholder="Enter Academy description"
+          [(ngModel)]="institute.instituteDescription" name="instituteDescription"><br><br>
+      </div><br><br>
   </div>
-  </form>
-  
+  <div id="academyRight">
+      <input type="button" (click)="updateAcademy()" class="btn btn-success" id="updateAcademy" name="update academy" value="update academy">
+
+  </div>
+</form>
