--- a/angularapp1/src/app/addstudent/addstudent.component.css
+++ b/angularapp1/src/app/addstudent/addstudent.component.css
@@ -1,14 +1,157 @@
-.row {
+body 
+{
+  background-color: gray;
+}
+#academyBackground{
+  background-repeat: no-repeat;
+  background-size: cover;
+    background-color: gray;
+  }
+  #academyHeader{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height:50px;
+    background-color:green;
+    
+  
+  }
+  h2{
+    margin-left: 20px;
+  }
+  #academyList{
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    
+  }
+  #academyBackground{
+    background-color: gray;
+    width: 100%;
+    height:100%;
+    justify-content:center;
+    margin-top: 0em;
+    position: absolute;
+  }
+  
+  ul li{
+    padding: 55px;
+    list-style: none;
+    
+    
+  }
+  ul li button{
+    cursor: pointer;
+    border: none;
+    background: none;
+    font-size: medium;
+    
+  }
+  ul li button:hover{
+    color: brown;
+  }
+  #adminAcademy{
+    font-size: 20px;
+  }
+  h5{
+    display: flex;
+    align-items: center;
+    margin-top:50px ;
+    margin-left: 50%;
+    margin-bottom: 5%;
+    font-size: medium;
+    font-weight: bold;
+  }
+  
+  
+  #logout{
+    cursor: pointer;
+    border: none;
+    background: none;
+    margin-right:20px ;
+    
+  }
+  
+  #logout:hover{
+    color: brown;
+  }
+  #academyLeft{
+    
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 30px;
     float: left;
+    size: 10%;
+    height: 10%;
+  }
+  #academyLeft input{
+    width:330px;
+    height:50px;
+  }
+  #academyCenter input{
+    width:330px;
+    height:50px;
+  }
+  #academyCenter {
+    justify-content: center;
+    float: right;
+    margin-right:35%;
+  
+  
+    
+  
+  }
+ 
+  #academyRight{
+    
+    right: 16px; 
+    margin-right: 2%;
+      border-radius:5%; 
+      position: absolute;
+    
+        
   }
 
-.column1
+  #academyRight input{
+    width:330px;
+    height:50px;
+  }
+  #addStudent{
+    border-radius: 9px;
+  }
+  
+  ::placeholder{
+  
+    font-size: medium;
+  }
+  .column2
 {
-    width: 50em;
-}
-
-.column2
-{
-   width: 72em;
+  position: absolute;
+   width: 55em;
    background-color: lightgray;
+   float: right;
+   top: 40%;
+   margin-left: 35%;
+   font-size:105%;
 }
+.academyr{
+  right: 16px; 
+  margin-right: 2%;
+    border-radius:5%; 
+    position: absolute;
+}
+#addStu{
+  position: absolute;
+  right: 100px;
+  margin-right: 10%;
+  border-radius:5%;
+  top: 100%;
+  font-size: large;
+  
+}
+#small{
+ font-size: xx-large; color: blue;
+}
+  
+  
