Update Student Modified

--- a/angularapp1/src/app/updatestudent/updatestudent.component.html
+++ b/angularapp1/src/app/updatestudent/updatestudent.component.html
@@ -293,7 +293,7 @@
           "
           class="text-danger"
         >
-          Invalid pincode
+          Invalid-Pincode
         </small>
       </div>
       <div style="padding: 1em">
