--- a/angularapp1/src/app/updatestudent/updatestudent.component.css
+++ b/angularapp1/src/app/updatestudent/updatestudent.component.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   width: 100%;
   height: 50px;
-  background-color: green;
+  background-color: rgb(7, 155, 7);
   padding: 10px;
 }
 h2 {
