model student updated

--- a/angularapp1/src/app/viewinstitute/viewinstitute.component.html
+++ b/angularapp1/src/app/viewinstitute/viewinstitute.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" style="background-color:darkmagenta; border-bottom: 1em solid white;">
+<nav class="navbar" style="background-color:rgb(187, 19, 187); border-bottom: 1em solid white;">
     <div class="container-fluid">
         <h1 style="color:aliceblue;">School Admission</h1>
         <h4 style="color:aliceblue;">Institute</h4>
